# lead-reveal

./: .gitignore  requirements.txt  xAI-Code-Explainer.code-workspace
backend/: .env.example  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
backend/core/: config.py
backend/langchain/: llm_config.py
backend/src/graphs/: edges.py  nodes.py  nodes_legacy.py  simple_graph.py  test_graph.py
backend/src/prompts/: decomposition_prompt.py  educational_prompts.py
backend/src/state/: schemas.py
backend/src/workers/: base_worker.py  coder.py  decomposer.py  orchestrator.py  validated_worker.py
backend/tests/: test_simple_flow.py
backend/utils/: logging_setup.py
backend/validation/: deps.py  playground.ipynb  sandboxed_validator.py
vscode-extension/: CHANGELOG.md  package-lock.json  package.json
vscode-extension/src/: extension.ts  webSocketClient.ts  webview.html
